--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 # system wide packages
 # psycopg2==2.6.1
 
-Django==1.11.*
+django==2.2.15
 six==1.10.0
 unidecode==1.1.0
 xlsxwriter==1.1.8
 unicodecsv==0.14.1
 requests==2.18.4
-django-imagekit==0.3.3
 django-mptt==0.9.1
-django_tinymce==2.6.0
+django-tinymce==2.9.0
 dj-pagination==2.4.0
 django-modeladmin-reorder==0.3.1
+django-filebrowser-no-grappelli==3.8.0
 
-git+git://github.com/redsolution/django-catalog-tree@1.11
-git+git://github.com/redsolution/django-treemenus@1.11
-git+git://github.com/redsolution/django-simple-feedback.git@1.11
-git+git://github.com/redsolution/django-tinymce-attachment@1.11
+git+git://github.com/shoker174/django-catalog-tree
+git+git://github.com/shoker174/django-treemenus
+git+git://github.com/shoker174/django-simple-feedback.git
+git+git://github.com/shoker174/django-imagekit@support/0.4.x
+git+git://github.com/shoker174/django-tinymce-attachment.git
 git+git://github.com/redsolution/django-nocaptcha-recaptcha.git
-git+git://github.com/redsolution/django-chunks.git@1.11
-git+git://github.com/redsolution/django-easy-news.git@1.11
-git+git://github.com/redsolution/django-seo.git@1.11
-git+git://github.com/redsolution/django-import-redirects@1.11
-git+git://github.com/redsolution/django-filebrowser-no-grappelli.git
-git+git://github.com/redsolution/django-page-cms@1.11
+git+git://github.com/shoker174/django-chunks.git
+git+git://github.com/shoker174/django-easy-news.git
+git+git://github.com/shoker174/django-seo.git
+git+git://github.com/shoker174/django-import-redirects
+git+git://github.com/shoker174/django-page-cms@django-2.2
