--- a/package.json
+++ b/package.json
@@ -34,18 +34,15 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "terser-webpack-plugin": "^1.2.3",
+    "remove-files-webpack-plugin": "^1.1.3",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "autoprefixer": "^9.5.1",
+    "url-loader": "^1.1.2",
     "jquery": "^3.3.1",
-    "jquery-placeholder": "^2.3.1",
     "jquery.maskedinput": "^1.4.1",
-    "magnific-popup": "^1.1.0",
-    "remove-files-webpack-plugin": "^1.1.3",
-    "slick-carousel": "^1.8.1",
-    "tokenizer": "^1.1.2",
-    "url-loader": "^1.1.2"
+    "swiper": "^6.7.1"
   }
 }
